--- a/src/css/modules/moving-picture.css
+++ b/src/css/modules/moving-picture.css
@@ -4,9 +4,10 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin: 0 auto;
 
 	@mixin respond-min 830px {
-		 max-height: 75vh;
+		 max-height: 100%;
 		/* overflow: hidden; */
 	}
 }
@@ -68,7 +69,7 @@
 	width: auto;
 	max-width: none;
 	height: 415px;
-	/* flex-shrink: 0;*/
+	flex-shrink: 0;
 
 	margin: 0 auto;
 
@@ -105,7 +106,7 @@
 		/* // padding: 3em; */
 		/* box-shadow: 1px 5px 20px #777; */
 		/* align-self: center; */
-		text-shadow: 0px 1px 1px #333;
+		/* text-shadow: 0px 1px 1px #333; */
 	}
 
 	@mixin respond-min $x-large{
