--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -23,7 +23,7 @@
                                 <source srcset="{{ this.bigImg }}" media="(min-width: 830px)" />
                                 <source srcset="{{ this.mobileImg }}" />
                                 <!--[if IE 9]></video><![endif]-->
-                                <img {{!-- class="lazyload" --}} alt="image with artdirection" data-sizes="auto" />
+                                <img class="lazyload" alt="image with artdirection" data-sizes="auto" />
                             </picture>
                         </div>
 
@@ -41,14 +41,14 @@
             {{/each}}
         </ul>
         <span class="js_prev prev">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 501.5 501.5">
                 <g>
                     <path fill="#2E435A" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z" />
                 </g>
             </svg>
         </span>
         <span class="js_next next">
-            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5">
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 501.5 501.5">
                 <g>
                     <path fill="#2E435A" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"
                     />
