--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -6,7 +6,7 @@
                 {{#if show}}
                 <li class="js_slide">
                     <div class="moving-picture">
-                        <div class="xmoving-picture__media">
+                        <div class="moving-picture__media">
                             <div id="vid-wrap"></div>
                             {{!-- <script type="text/javascript">
                                     // if (window.matchMedia("(min-width: 1100px)").matches) {
@@ -27,10 +27,10 @@
                             </picture>
                         </div>
 
-                        <div class="moving-picture__overlay  js-animateSequence">
-                            <h2 class="moving-picture__overlay__headline seq">{{ this.headline }}</h2>
+                        <div class="moving-picture__overlay  xjs-animateSequence">
+                            <h2 class="moving-picture__overlay__headline xseq">{{ this.headline }}</h2>
                             {{!-- <p class="moving-picture__overlay__teaser seq">{{ this.teaser }}</p> --}}
-                            <p class="seq">
+                            <p class="xseq">
                                 <a class="xmoving-picture__overlay__button btn" href="admissions/index.php">{{ this.button }}</a>
                             </p>
                         </div>
@@ -43,14 +43,14 @@
         <span class="js_prev prev">
             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 501.5 501.5">
                 <g>
-                    <path fill="#2E435A" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z" />
+                    <path fill="#ffffff" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z" />
                 </g>
             </svg>
         </span>
         <span class="js_next next">
             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 501.5 501.5">
                 <g>
-                    <path fill="#2E435A" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"
+                    <path fill="#ffffff" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"
                     />
                 </g>
             </svg>
