--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -17,7 +17,7 @@
 						</div>
 					</div>
 
-					<form id="find-program-form" class="form--find-program  js-animateRevealUp" action="https://www.bethel.edu/academics/program-search" method="GET">
+					<form id="find-program-form" class="form--find-program  xjs-animateRevealUp" action="https://www.bethel.edu/academics/program-search" method="GET">
 						<div class="search--program">
 							<input required name="search" id="find-program-txt" type="search" placeholder="Search for your program">
 							<button id="find-program-btn" class="btn" type="submit">
