--- a/src/css/modules/moving-picture.css
+++ b/src/css/modules/moving-picture.css
@@ -1,55 +1,44 @@
 .moving-picture {
 	position: relative;
-	max-width: 125em;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	margin: 0 auto;
+	white-space: normal; /* needed to override lory's css */
 
 	@mixin respond-min 830px {
 		 max-height: 100%;
-		/* overflow: hidden; */
 	}
 }
 
-/* .moving-picture:before {
-	@mixin respond-min 0 {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background-image: linear-gradient(to bottom,transparent 35%,#000);
-        opacity: 1;
-        z-index: 1; 
-      }
- }
-
- .moving-picture.no-gradient:before {
- 	background-image: none;
- } */
+/* .moving-picture::after {
+	position: absolute;
+	content: '';
+	width: 100%;
+	height: 100%;
+	background: $bethel--yellow;
+	opacity: .5;
+	transform: translate3d(0, 65%, 0) skew(0, 5deg);
+} */
 
 .moving-picture__media {
-	height: 415px;
-	/* display: flex;*/
-	/* justify-content: center;*/
+	height: 500px;
+	display: flex;
+	justify-content: center;
 
 	@mixin respond-min 830px {
-		/* position: relative;*/
-
-		/* padding-bottom: 76%;*/
 		height: auto;
 		min-height: 200%;
+		min-width: 100%;
 	}
 }
 
 .moving-picture__media picture {
 	width: auto;
 	max-width: none;
-	height: 415px;
-	/* display: flex;*/
-	/* justify-content: center;*/
+	height: 500px;
+	display: flex;
+	justify-content: center;
 	position: absolute;
 	left: -100%;
 	right: -100%;
@@ -58,6 +47,7 @@
 		height: auto;
 		position: relative;
 		max-width: 100%;
+		min-width: 100%;
 		width: 100%;
 		display: block;
 		left: 0;
@@ -68,7 +58,7 @@
 .moving-picture__media picture img {
 	width: auto;
 	max-width: none;
-	height: 415px;
+	height: 500px;
 	flex-shrink: 0;
 
 	margin: 0 auto;
@@ -85,52 +75,59 @@
 
 .moving-picture__overlay {
 	position: absolute;
-	/* left: 2em; */
-	/* bottom: 0; */
-
-	/* // color: #555; */
-	/* font-family: $gotham; */
-	/* z-index: 1; */
-	/* // padding: 2em;
-	// text-align: center;
-	// background: rgba(100,100,100,.4); */
-	/* overflow: visible; */
-	/* display: inline; */
-
+	bottom: 0;
+	max-width: 80%;
+	z-index: 100;
+	/* border: 10px solid $bethel--yellow; */
+	padding: 1em;
+	/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
+	
 	@mixin respond-min $medium {
-		/* // position: absolute; */
-		/* left: 15%; */
-		/* bottom: -200px; */
-		
-		width: 60%;
-		/* // padding: 3em; */
-		/* box-shadow: 1px 5px 20px #777; */
-		/* align-self: center; */
-		/* text-shadow: 0px 1px 1px #333; */
+		bottom: 40%;
 	}
-
+	
 	@mixin respond-min $x-large{
 	}
 }
 
 .moving-picture__overlay__headline {
-	font-size: 2.2rem;
+	font-size: 3rem;
 	/* margin: 0;*/
+	text-shadow: 0px 1px 1px #333;
 	font-weight: 500;
 	/* letter-spacing: .02em; */
-	margin-bottom: 0;
+	/* margin-bottom: 0; */
 	margin-top: 0;
 	color: white;
-	line-height: 1.1;
+	line-height: 1.2;
+	/* background: rgba(255, 198, 0, .4); */
+	/* background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAAXNSR0IArs4c6QAAABBJREFUCB1j+N0n95+BIAAAYQQCp1VcHJAAAAAASUVORK5CYII=) repeat; */
+	/* background-color: #ffffff; */
+	/* background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='1' fill-rule='evenodd'%3E%3Ccircle cx='3' cy='3' r='3'/%3E%3Ccircle cx='13' cy='13' r='3'/%3E%3C/g%3E%3C/svg%3E"); */
+	/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
 
+	display: inline;
+	/* box-shadow: inset 0 -10px 0 $bethel--yellow; */
+	
 	@mixin respond-min $medium {
 		font-size: 2.4rem;
 	}
-
+	
 	@mixin respond-min $x-large{
 		font-size: 5rem;
 	}
 }
+
+/* .moving-picture__overlay__headline:after {
+	content: '';
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAMAAAADCAYAAABWKLW/AAAAAXNSR0IArs4c6QAAABBJREFUCB1j+N0n95+BIAAAYQQCp1VcHJAAAAAASUVORK5CYII=) repeat;
+	z-index: -1;
+} */
 
 .moving-picture__overlay__teaser {
 	display: none;
@@ -141,62 +138,4 @@
 		/* display: block; */
 		font-size: 1rem;
 	}
-}
-
-/* .moving-picture__overlay__button {
-	background-color: $bethel--blue;
-	padding: .75em 1em;
-	border-radius: .3em;
-	font-size: 1rem;
-	color: #fff;
-	text-transform: uppercase;
-	font-weight: 500;
-	letter-spacing: .02em;
-	margin-top: 0;
-	display: inline-block;
-
-	@mixin respond-min $medium {
-		margin-top: .5em;
-	}
-} */
-
-/* centered version */
-
-.moving-picture__overlay--center {
-/* 	position: absolute;
-	left: 0;
-	bottom: 0; */
-	color: #fff;
-	font-family: $gotham;
-	z-index: 20;
-	padding: 1em 2.5em;
-	text-align: center;
-
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: auto;
-    height: auto;
-    min-width: 100%;
-    min-height: 100%; 
-	transform: translate(-50%, -50%);
-
-	@mixin respond-min $medium {
-		width: 75%;
-		padding: 2% 8%;
-	}
-}
-
-.moving-picture__overlay--center::before {
-    content: '';
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(24, 25, 34, 0.5);
 }
