--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -1,15 +1,34 @@
 
 .stickyBar {
+	/* display: none; */
+	display: block;
 	position: sticky;
 	top: 0;
 	display: flex;
 	padding: 1.5em;
 	background: white;
+	/* background: linear-gradient(150deg, #0069aa, 60%, #ffc600); */
+	border-bottom: 4px solid $bethel--yellow;
 	z-index: 1000;
 	justify-content: space-around;
-	font-size: 1.2rem;
 	font-family: $gotham;
-	margin-top: -105px;
+	font-size: .8rem;
+	text-align: center;
+	box-shadow: 0px 5px 15px rgba(120,120,120,.3);
+
+	@mixin respond-min 830px {
+		font-size: 1.2rem;
+		margin-top: -105px;
+	}
+}
+
+.stickyBar span {
+	display: flex;
+}
+
+.stickyBar span svg {
+	width: 3rem;
+	height: 3rem;
 }
 
 .stickyBar a {
@@ -17,16 +36,22 @@
 	border-radius: 4px;
 }
 
+.stickyBar a:hover {
+	text-decoration: none;
+}
+
 .stickyBar .active {
 	background: $bethel--yellow;
+		background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg');
+	
 }
 
 .sectionBlur {
 	position: relative;
-	top: 0;
+	/* top: 0; */
 	z-index: 1;
-	transform: translate3d(0,0,0);
-	will-change: auto;
+	/* transform: translate3d(0,0,0); */
+	/* will-change: auto; */
 }
 
 .sectionBlur svg {
@@ -49,26 +74,28 @@
 }
 
 .sectionBlurImg {
-	overflow: hidden;
-	/* position: sticky; */
-	/* top: 0; */
-	height: 100%;
-	width: 100vw;
-	background-attachment: fixed;
-	background-size: cover;
-	position: absolute;
+	/* overflow: hidden; */
+	position: sticky;
+	top: 0;
+	height: 100vh;
+	/* width: 100vw; */
+	/* background-attachment: fixed; */
+	/* background-size: cover; */
+	/* position: absolute; */
 	/* filter: url('#sharpBlur') */
 }
 
-/* .sectionBlurImg img {
+.sectionBlurImg img {
 	object-fit: cover;
-	margin: -2vh;
+	/* margin: -2vh; */
 	height: 100%;
-	} */
+	/* position: absolute; */
+	}
 
 .sectionBlurContent {
 	position: inherit;
-	padding-top:5em;
+	/* padding-top: 15em; */
+	margin-top: -50vh;
 }
 
 .sectionBlurBody {
@@ -87,7 +114,7 @@
 }
 
 .sectionBlurTitle {
-	width: 70%;
+	width: 80%;
 	position: inherit;
 	/* font-size: 7em; */
 	/* font-weight: 300; */
@@ -97,10 +124,34 @@
 	padding: 1em .5em;
 	margin: 0 auto 2em;
 
+
+	&::before {
+		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
+		background-image: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='0.38' fill-rule='evenodd'%3E%3Ccircle cx='3' cy='3' r='3'/%3E%3Ccircle cx='13' cy='13' r='3'/%3E%3C/g%3E%3C/svg%3E");
+		content: '';
+		/* width: 100%; */
+		position: absolute;
+		top: 30px;
+		bottom: -20px;
+		right: -20px;
+		left: 30px;
+		z-index: 0;
+	}
+
 	h2 {
-		font-size: 5em;
+		font-size: 2em;
 		padding: 1em .5em;
 		margin: 0;
+		z-index: 100;
+		position: inherit;
+
+		@mixin respond-min $medium {
+			font-size: 3rem;
+		}
+
+		@mixin respond-min $large {
+			font-size: 4rem;
+		}
 	}
 }
 
@@ -108,6 +159,7 @@
 	.topBorder,
 	.bottomBorder {
 		background: white;
+		background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg');
 		position: absolute;
 		/* width: 0; */
 		height: 10px;
@@ -116,16 +168,19 @@
 	.topBorder {
 		top: 0;
 		left: 0;
+
 	}
 
 	.bottomBorder {
 		bottom: 0;
 		right: 0;
+		background-position-x: 100%;
 	}
 
 	.leftBorder,
 	.rightBorder {
 		background: white;
+		background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg'); 		
 		position: absolute;
 		/* height: 0; */
 		width: 10px;
