--- a/src/css/forms/form--request-info.css
+++ b/src/css/forms/form--request-info.css
@@ -1,11 +1,23 @@
+.sectionRequestInfo .grid {
+  /* background-image: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg') ; */
+		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+
+}
+
+.sectionRequestInfo .grid-cell {
+  background: #fff;
+  margin: 1em !important;
+  /* padding: 1em; */
+}
+
 .form--request-info fieldset {
   font-family: $gotham;
   font-size: 1.2rem;
   line-height: 2em;
-  color: #ddd;
+  /* color: #ddd; */
 
   @mixin respond-min $medium {
-    font-size: 1.5rem;
+    /* font-size: 1rem; */
     line-height: 3em;
   }
 }
@@ -14,10 +26,10 @@
   font-size: 1.2rem;
   display: inline;
   font-weight: 400;
-  color: #ddd;
+  /* color: #ddd; */
 
   @mixin respond-min $medium {
-    font-size: 1.5rem;
+    /* font-size: 1.5rem; */
   }
 }
 
@@ -55,10 +67,7 @@
   }
 }
 
-.form--request-info #user_firstName {
-  width: 5em;
-}
-
+.form--request-info #user_firstName,
 .form--request-info #user_lastName {
   width: 5em;
 }
@@ -69,4 +78,28 @@
 
 .form--request-info__select {
   width: 13em;
+}
+
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  color: $bethel--yellow;
+  opacity: 1;
+}
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: $bethel--yellow;
+  opacity: 1;
+}
+
+:-ms-input-placeholder {
+  /* IE 10+ */
+  color: $bethel--yellow;
+  opacity: 1;
+}
+
+:-moz-placeholder {
+  /* Firefox 18- */
+  color: $bethel--yellow;
+  opacity: 1;
 }
