--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -2,8 +2,8 @@
 .stickyBar {
 	/* display: none; */
 	display: block;
-	position: sticky;
-	top: 0;
+	/* position: sticky; */
+	/* top: 0; */
 	display: flex;
 	padding: 1.5em;
 	background: white;
@@ -43,6 +43,7 @@
 .stickyBar .active {
 	background: $bethel--yellow;
 		background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg');
+		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 	
 }
 
@@ -50,16 +51,18 @@
 	position: relative;
 	/* top: 0; */
 	z-index: 1;
-	/* transform: translate3d(0,0,0); */
+	margin-bottom: -2px;
+	transform: translate3d(0,0,0);
 	/* will-change: auto; */
 }
 
 .sectionBlur svg {
-	display: none;
+	/* display: none; */
 	width: 0; 
 	height: 0 ;
 	overflow: hidden ;
 	visibility: hidden;
+	will-change: auto;
 }
 
 .hideSvgSoThatItSupportsFirefox {
@@ -74,28 +77,27 @@
 }
 
 .sectionBlurImg {
-	/* overflow: hidden; */
+	overflow: hidden;
 	position: sticky;
-	top: 0;
-	height: 100vh;
-	/* width: 100vw; */
-	/* background-attachment: fixed; */
-	/* background-size: cover; */
-	/* position: absolute; */
-	/* filter: url('#sharpBlur') */
+	top: 4vh;
+	min-height: 96vh;
+	will-change: scroll-position;
+	background: black;
 }
 
 .sectionBlurImg img {
+	/* filter: url('#sharpBlur1'); */
 	object-fit: cover;
-	/* margin: -2vh; */
-	height: 100%;
-	/* position: absolute; */
+	margin: -1vh;
+	min-width: 104vw;
+	/* will-change: scroll-position; */
 	}
 
 .sectionBlurContent {
 	position: inherit;
 	/* padding-top: 15em; */
 	margin-top: -50vh;
+	/* will-change: scroll-position; */
 }
 
 .sectionBlurBody {
@@ -124,10 +126,11 @@
 	padding: 1em .5em;
 	margin: 0 auto 2em;
 
-
 	&::before {
-		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
-		background-image: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='0.38' fill-rule='evenodd'%3E%3Ccircle cx='3' cy='3' r='3'/%3E%3Ccircle cx='13' cy='13' r='3'/%3E%3C/g%3E%3C/svg%3E");
+		/* background-image: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='0.38' fill-rule='evenodd'%3E%3Ccircle cx='3' cy='3' r='3'/%3E%3Ccircle cx='13' cy='13' r='3'/%3E%3C/g%3E%3C/svg%3E"); */
+		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+		/* background: rgba(100,100,100,1); */
+		background-blend-mode: multiply;
 		content: '';
 		/* width: 100%; */
 		position: absolute;
@@ -140,7 +143,7 @@
 
 	h2 {
 		font-size: 2em;
-		padding: 1em .5em;
+		padding: .5em .25em;
 		margin: 0;
 		z-index: 100;
 		position: inherit;
@@ -150,7 +153,7 @@
 		}
 
 		@mixin respond-min $large {
-			font-size: 4rem;
+			font-size: 5rem;
 		}
 	}
 }
@@ -159,7 +162,9 @@
 	.topBorder,
 	.bottomBorder {
 		background: white;
-		background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg');
+		/* background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg'); */
+		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
+		
 		position: absolute;
 		/* width: 0; */
 		height: 10px;
@@ -180,7 +185,9 @@
 	.leftBorder,
 	.rightBorder {
 		background: white;
-		background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg'); 		
+		/* background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg'); 		 */
+		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
+		
 		position: absolute;
 		/* height: 0; */
 		width: 10px;
@@ -195,6 +202,10 @@
 		bottom: 0;
 		right: 0;
 	}
+}
+
+.sectionBlurTeaser {
+	font-size: 2rem;
 }
 
 .sectionBlur .proof-points .grid-cell {
