--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -105,6 +105,14 @@
 	top:0;
 	}
 
+.sectionFadeImg {
+	width: 100vw;
+	height: 100%;
+	background-attachment: fixed;
+	background-size: cover;
+	position: absolute;
+}
+
 .sectionBlurContent {
 	position: inherit;
 	/* padding-top: 15em; */
