--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -1,24 +1,25 @@
 
 .stickyBar {
 	/* display: none; */
-	display: block;
-	/* position: sticky; */
-	/* top: 0; */
+	/* display: block; */
+	position: sticky;
+	top: -1px;
 	display: flex;
 	padding: 1.5em;
-	background: white;
+	/* background: white; */
+	background: $bethel--blue;
 	/* background: linear-gradient(150deg, #0069aa, 60%, #ffc600); */
-	border-bottom: 4px solid $bethel--yellow;
+	/* border-bottom: 4px solid $bethel--yellow; */
 	z-index: 1000;
 	justify-content: space-around;
 	font-family: $gotham;
 	font-size: .8rem;
 	text-align: center;
-	box-shadow: 0px 5px 15px rgba(120,120,120,.3);
+	/* box-shadow: 0px 5px 15px rgba(120,120,120,.3); */
 
 	@mixin respond-min 830px {
 		font-size: 1.2rem;
-		margin-top: -105px;
+		margin-top: -110px;
 	}
 }
 
@@ -29,11 +30,13 @@
 .stickyBar span svg {
 	width: 3rem;
 	height: 3rem;
+	fill: $bethel--navy;
 }
 
 .stickyBar a {
 	padding: .5em 1em;
 	border-radius: 4px;
+	color: #fff;
 }
 
 .stickyBar a:hover {
@@ -49,11 +52,6 @@
 
 .sectionBlur {
 	position: relative;
-	/* top: 0; */
-	/* z-index: 1; */
-	/* margin-bottom: -2px; */
-	/* transform: translate3d(0,0,0); */
-	/* will-change: auto; */
 	background-attachment: fixed;
 	background-size: cover;
 }
@@ -68,61 +66,63 @@
 }
 
 .hideSvgSoThatItSupportsFirefox {
-	border: 0;
+	/* border: 0;
 	clip: rect(0 0 0 0);
 	height: 1px;
 	margin: -1px;
 	overflow: hidden;
 	padding: 0;
 	position: absolute;
-	width: 1px;
+	width: 1px; */
 }
 
-.sectionBlurImg {
-	/* overflow: hidden; */
-	position: absolute;
-	top: 0;
-	/* min-height: 96vh; */
-	/* will-change: auto; */
-	/* background: #fff; */
-
-	height: 100%;
-	width: 100vw;
-	background-attachment: fixed;
-	background-size: cover;
-
-	position: sticky;
-}
-
-.sectionBlurImg img {
-	/* filter: url('#sharpBlur1'); */
-	object-fit: cover;
-	/* margin: -1vh; */
-	/* min-width: 104vw; */
-	/* position: fixed; */
-	/* will-change: scroll-position; */
+.sectionCleanImg {
 	position: sticky;
 	top:0;
-	}
+	z-index: 10;
+	backface-visibility: hidden;
+	height: 100vh;
+}
+
+.sectionCleanImg img {
+	height: 100%;
+	object-fit: cover;
+}
 
 .sectionFadeImg {
-	width: 100vw;
-	height: 100%;
-	background-attachment: fixed;
-	background-size: cover;
-	position: absolute;
+	display: none;
+	backface-visibility: hidden;
+}
+
+.isAtLeastIE11 {
+
+	.sectionCleanImg {
+		padding: 0;
+		margin: 0;
+		display: flex;
+		width: 100vw;
+		height: 100%;
+		position: relative;
+	}
+	.sectionFadeImg {
+		display: flex;
+		width: 100vw;
+		height: 100%;
+		position: absolute;
+		background-attachment: fixed;	
+		background-size: cover;	
+		padding: 0;
+		margin: 0;
+	}
 }
 
 .sectionBlurContent {
 	position: inherit;
-	/* padding-top: 15em; */
-	/* margin-top: -50vh; */
-	/* will-change: scroll-position; */
+	margin-top: -50vh;
 }
 
 .sectionBlurBody {
 	color: #fff;
-	/* width: 60vh; */
 	margin: 0 auto;
 	z-index: 200;
 	position: inherit;
@@ -158,7 +158,7 @@
 		bottom: -20px;
 		right: -20px;
 		left: 30px;
-		z-index: 0;
+		z-index: 10;
 	}
 
 	h2 {
@@ -183,10 +183,10 @@
 	.bottomBorder {
 		background: white;
 		/* background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg'); */
-		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
-		
+		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");  */
+		z-index: 20;
 		position: absolute;
-		/* width: 0; */
+		width: 100%;
 		height: 10px;
 	}
 
@@ -207,9 +207,9 @@
 		background: white;
 		/* background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg'); 		 */
 		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
-		
+		z-index: 20;
 		position: absolute;
-		/* height: 0; */
+		height: 100%;
 		width: 10px;
 	}
 
@@ -225,7 +225,7 @@
 }
 
 .sectionBlurTeaser {
-	font-size: 2rem;
+	font-size: 1.5rem;
 }
 
 .sectionBlur .proof-points .grid-cell {
@@ -293,8 +293,8 @@
 }
 
 .linkBlock li a {
-	/* color: #fff; */
-	background: white;
+	color: #fff;
+	background: rgba(0,0,0,.3);
 	display: block;
 	width: 100%;
 	padding: .5em 1em;
