--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -8,23 +8,23 @@
                     <div class="moving-picture">
                         <div class="moving-picture__media">
                             <div id="vid-wrap"></div>
-                            {{!-- <script type="text/javascript">
-                                    // if (window.matchMedia("(min-width: 1100px)").matches) {
-                                    //     var vidStr = '<video preload="auto" autoplay="autoplay" muted="true" loop="true" style="min-width: 100%" id="vid">';
-                                    //     vidStr += '<source src="https://www.bethel.edu/cdn/videos/pathways-in-healthcare.mp4" type="video/mp4" />';
-                                    //     vidStr += '<img src="https://cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/welcome-week-2016-2x1.jpg" />';
-                                    //     vidStr += '</video>';
-                                    //     document.getElementById('vid-wrap').innerHTML = vidStr;
-                                    //     document.getElementById('vid').play();
-                                    // }
-                            </script> --}}
-                            <picture>
+                            <script type="text/javascript">
+                                    if (window.matchMedia("(min-width: 1100px)").matches) {
+                                        var vidStr = '<video preload="auto" autoplay="autoplay" muted="true" loop="true" style="min-width: 100%" id="vid">';
+                                        vidStr += '<source src="https://www.bethel.edu/_homepages/www/images/welcome-week-2017-video.mp4" type="video/mp4" />';
+                                        vidStr += '<img src="https://cdn3.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/_homepages/www/images/feature/welcome-week-2016-2x1.jpg" />';
+                                        vidStr += '</video>';
+                                        document.getElementById('vid-wrap').innerHTML = vidStr;
+                                        document.getElementById('vid').play();
+                                    }
+                            </script>
+                            {{!-- <picture>
                                 <!--[if IE 9]><video style="display: none"><![endif]-->
                                 <source srcset="{{ this.bigImg }}" media="(min-width: 830px)" />
                                 <source srcset="{{ this.mobileImg }}" />
                                 <!--[if IE 9]></video><![endif]-->
                                 <img class="lazyload" alt="image with artdirection" data-sizes="auto" />
-                            </picture>
+                            </picture> --}}
                         </div>
 
                         <div class="moving-picture__overlay  xjs-animateSequence">
