--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -85,7 +85,8 @@
 }
 
 .sectionCleanImg img {
-	height: 100%;
+	height: 104%;
+	margin: -2em 0;
 	object-fit: cover;
 }
 
@@ -138,11 +139,8 @@
 .sectionBlurTitle {
 	width: 80%;
 	position: inherit;
-	/* font-size: 7em; */
-	/* font-weight: 300; */
 	text-align: center;
 	color: #fff;
-	/* border: 20px solid white; */
 	padding: 1em .5em;
 	margin: 0 auto 2em;
 
@@ -150,12 +148,14 @@
 		/* background-image: url("data:image/svg+xml,%3Csvg width='14' height='14' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='0.38' fill-rule='evenodd'%3E%3Ccircle cx='3' cy='3' r='3'/%3E%3Ccircle cx='13' cy='13' r='3'/%3E%3C/g%3E%3C/svg%3E"); */
 		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 		/* background: rgba(100,100,100,1); */
-		background-blend-mode: multiply;
+		/* background-blend-mode: multiply; */
+		background: $bethel--navy;
+		opacity: .5;
 		content: '';
 		/* width: 100%; */
 		position: absolute;
-		top: 30px;
-		bottom: -20px;
+		top: 40px;
+		bottom: -10px;
 		right: -20px;
 		left: 30px;
 		z-index: 10;
@@ -163,10 +163,12 @@
 
 	h2 {
 		font-size: 2em;
+		font-weight: 500;
 		padding: .5em .25em;
 		margin: 0;
 		z-index: 100;
 		position: inherit;
+		border: 5px solid #fff;
 
 		@mixin respond-min $medium {
 			font-size: 3rem;
@@ -178,12 +180,10 @@
 	}
 }
 
-.sectionBlurTitle {
+/* .sectionBlurTitle {
 	.topBorder,
 	.bottomBorder {
 		background: white;
-		/* background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg'); */
-		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");  */
 		z-index: 20;
 		position: absolute;
 		width: 100%;
@@ -205,8 +205,6 @@
 	.leftBorder,
 	.rightBorder {
 		background: white;
-		/* background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg'); 		 */
-		/* background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffffff' fill-opacity='1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E"); */
 		z-index: 20;
 		position: absolute;
 		height: 100%;
@@ -222,7 +220,7 @@
 		bottom: 0;
 		right: 0;
 	}
-}
+} */
 
 .sectionBlurTeaser {
 	font-size: 1.5rem;
