--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -52,8 +52,7 @@
 	if (raf) raf(cb);
 	else window.addEventListener('load', cb);
 
-    // loadJS("https://www.bethel.edu/cdn/js/webpack.js");
-    loadJS("js/webpack.js");
+    loadJS("js/glaze.js");
 </script>
 
 </body>
