--- a/src/css/glaze.css
+++ b/src/css/glaze.css
@@ -34,38 +34,39 @@
 @import "page/page__title.css";
 @import "page/page--home.css";
 
-@import "modules/section--apply.css";
-@import "modules/maps.css";
+@import "modules/action-nav.css";
 @import "modules/calendar.css";
 @import "modules/card.css";
-@import "modules/news.css";
 @import "modules/events.css";
+@import "modules/maps.css";
+@import "modules/news.css";
 @import "modules/moving-picture.css";
 @import "modules/program-search.css";
 @import "modules/routing.css";
-@import "modules/section--home.css";
+@import "modules/section--apply.css";
+/* @import "modules/section--home.css"; */
 @import "modules/social-media.css";
-@import "modules/action-nav.css";
+@import "modules/stickyNav.css";
 
 @import "enhance/carousel.css";
-
 @import "modules/lory.css";
 
-@import "enhance/search.css";
 @import "enhance/accordion.css";
+@import "enhance/alerts.css";
 @import "enhance/animation.css";
 @import "enhance/big-steps.css";
 @import "enhance/buttons.css";
 @import "enhance/checkmark.css";
+@import "enhance/collapsible-block.css";
+@import "enhance/fancyBackgrounds.css";
+@import "enhance/boxEffects.css";
+@import "enhance/image-hover.css";
+@import "enhance/odometer.css";
 @import "enhance/parallax.css";
 @import "enhance/proof-points.css";
-@import "enhance/search.css";
 @import "enhance/quotes.css";
+@import "enhance/search.css";
 @import "enhance/svg-icons.css";
-@import "enhance/image-hover.css";
-@import "enhance/collapsible-block.css";
-@import "enhance/odometer.css";
-@import "enhance/alerts.css";
 
 @import "enhance/clean-up.css";
 @import "base/utils.css";
