--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -1,139 +1,8 @@
 
-.stickyBar {
-	/* display: none; */
-	/* display: block; */
-	position: sticky;
-	top: -1px;
-	display: flex;
-	padding: 1.5em;
-	/* background: white; */
-	background: $bethel--blue;
-	/* background: linear-gradient(150deg, #0069aa, 60%, #ffc600); */
-	/* border-bottom: 4px solid $bethel--yellow; */
-	z-index: 1000;
-	justify-content: space-around;
-	font-family: $gotham;
-	font-size: .8rem;
-	text-align: center;
-	/* box-shadow: 0px 5px 15px rgba(120,120,120,.3); */
-
-	@mixin respond-min 830px {
-		font-size: 1.2rem;
-		margin-top: -110px;
-	}
-}
-
-.stickyBar span {
-	display: flex;
-}
-
-.stickyBar span svg {
-	width: 3rem;
-	height: 3rem;
-	fill: $bethel--navy;
-}
-
-.stickyBar a {
-	padding: .5em 1em;
-	border-radius: 4px;
-	color: #fff;
-}
-
-.stickyBar a:hover {
-	text-decoration: none;
-}
-
-.stickyBar .active {
-	background: $bethel--yellow;
-		background: url('http://www.glamourmagazine.co.uk/static/img/pattern-1.jpg');
-		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
-	
-}
-
 .sectionBlur {
 	position: relative;
 	background-attachment: fixed;
 	background-size: cover;
-}
-
-.sectionBlur svg {
-	/* display: none; */
-	/* width: 0; 
-	height: 0 ;
-	overflow: hidden ;
-	visibility: hidden;
-	will-change: auto; */
-}
-
-.hideSvgSoThatItSupportsFirefox {
-	/* border: 0;
-	clip: rect(0 0 0 0);
-	height: 1px;
-	margin: -1px;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px; */
-}
-
-.sectionCleanImg {
-	position: sticky;
-	top:0;
-	z-index: 10;
-	backface-visibility: hidden;
-	height: 100vh;
-}
-
-.sectionCleanImg img {
-	height: 104%;
-	margin: -2em 0;
-	object-fit: cover;
-}
-
-.sectionFadeImg {
-	display: none;
-	backface-visibility: hidden;
-}
-
-.isAtLeastIE11 {
-
-	.sectionCleanImg {
-		padding: 0;
-		margin: 0;
-		display: flex;
-		width: 100vw;
-		height: 100%;
-		position: relative;
-	}
-	.sectionFadeImg {
-		display: flex;
-		width: 100vw;
-		height: 100%;
-		position: absolute;
-		background-attachment: fixed;	
-		background-size: cover;	
-		padding: 0;
-		margin: 0;
-	}
-}
-
-.sectionBlurContent {
-	position: inherit;
-	margin-top: -50vh;
-}
-
-.sectionBlurBody {
-	color: #fff;
-	margin: 0 auto;
-	z-index: 200;
-	position: inherit;
-	font-family: $gotham;
-	font-size: 100%;
-	font-weight: 400;
-}
-
-.sectionBlurBody:last-child {
-	padding-bottom: 10vh;
 }
 
 .sectionBlurTitle {
@@ -180,7 +49,7 @@
 	}
 }
 
-/* .sectionBlurTitle {
+.sectionBlurTitle {
 	.topBorder,
 	.bottomBorder {
 		background: white;
@@ -220,7 +89,7 @@
 		bottom: 0;
 		right: 0;
 	}
-} */
+}
 
 .sectionBlurTeaser {
 	font-size: 1.5rem;
