--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -1,9 +1,9 @@
-<section class="grid-section  sectionRequestInfo  mt0">
-	<div class="inner">
-		<div class="grid  grid--center">
+<div class="sectionRequestInfo">
+	<div class="inner  pv6">
+		<div class="grid  grid--center  bkg--white">
 			<div class="grid-cell">
-				<div class="medium-grid-pad-2x">
-					{{!-- <h3 class="h1  pt1  mb2  center  fw300">Request information</h3> --}}
+				<div class="grid-pad-2x">
+					<h3 class="beta  pt1  center  fw300">Request information</h3>
 					<form class="form--request-info  validate-form  pt3" action="" method="post" >
 					<blockquote class="center">
 						<fieldset>
@@ -43,7 +43,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 
 <script type="text/javascript">
 	var form = document.querySelector('.form--request-info');
