--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -52,7 +52,7 @@
 	if (raf) raf(cb);
 	else window.addEventListener('load', cb);
 
-    loadJS("js/glaze.js");
+    loadJS("js/newt.js");
 </script>
 
 </body>
