--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -132,7 +132,7 @@ pageTitle: Test title
             <g>
             </g>
         </svg>
-        <a href="#academics">Real Scholarship</a>
+        <a href="#academics">Purpose-driven academics</a>
     </span>
     <span>
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -232,7 +232,7 @@ pageTitle: Test title
             <g>
             </g>
         </svg>
-        <a href="#community">Real Experience</a>
+        <a href="#community">Head-turning experience</a>
     </span>
     <span>
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 453.841 453.841" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -268,57 +268,11 @@ pageTitle: Test title
                 />
             </g>
         </svg>
-        <a href="#spirituality">Real Faith</a>
+        <a href="#spirituality">Life-changing faith</a>
     </span>
 </div>
 
 {{!-- Profiles --}}
-{{!-- <section style="overflow: hidden;">
-    <div class="bkg--diagonal"></div>
-  
-    <div class="inner pv6">
-        <h2 class="center  mb1  beta  fw300" style="position: relative;color:#fff;">Our Stories</h2>
-
-        <div class="card-deck  mb2">
-            <div class="card">
-                <img class="card-img-top" src="https://cdn1.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/news/articles/2018/images/ryan-wahlund.jpg">
-                <div class="card-body">
-                    <h6 class="mt0 h3 card-title">The Path Less Traveled</h6>
-                    <p class="card-text">Ryan Wahlund ’06 tried out several majors—and career paths—before he found one that fit.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">March 28, 2018</small>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="https://cdn1.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/news/articles/2018/images/art-of-conversation.jpg">
-                <div class="card-body">
-                    <h6 class="mt0 h3 card-title">Practicing the “Art of Conversation”</h6>
-                    <p class="card-text">The Office of Career Development and Calling hosted an event that allowed students to chat with alumni and improve their networking skills.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">March 25, 2018</small>
-                </div>
-            </div>
-
-            <div class="card">
-                <img class="card-img-top" src="https://cdn2.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/news/articles/2018/images/transfer-katie-murphy.jpg">
-                <div class="card-body">
-                    <h6 class="mt0 h3 card-title">Transfer Student Experiences the Bethel Difference</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-                <div class="card-footer">
-                    <small class="text-muted">March 10, 2018</small>
-                </div>
-            </div>
-        </div>
-
-        <p class="center"><a class="btn">See more Stories</a></p>
-    </div>
-
-</section> --}}
-
 <section class="bkg--white" style="overflow: hidden;">
     <div class="bkg--diagonal"></div>
   
@@ -327,7 +281,7 @@ pageTitle: Test title
   
 
         <div class="grid" style="position: relative;">
-            <div class="grid-cell  u-medium-1-2  mr4">
+            <div class="grid-cell  u-medium-1-2  mr4--medium">
 
                     <div class="backgroundOffset --diagonalBlue">
                         <img class="" style="border-radius: 1em;" src="https://cdn1.bethel.edu/resize/unsafe/1500x0/smart/https://www.bethel.edu/news/articles/2018/images/ryan-wahlund.jpg">
@@ -380,10 +334,10 @@ pageTitle: Test title
 <section id="academics" class="pv5  realSection" style="overflow: hidden;">
     <div class="bkg--diagonal2"></div>
     <div class="inner" style="position: relative;z-index:10;">
-        <h1 class="fw300  ta--center"  style="font-size: 5rem">Real Scholarship</h1>
+        <h2 class="delta  fw300  ta--center">Purpose-driven academics</h2>
 
         <div class="grid  grid--center  mb5">
-            <div class="grid-cell u-2-3">
+            <div class="grid-cell u-medium-2-3">
                 <div class="medium-grid-pad-1x">
                     <h3 class="alpha fw400">Extraordinary education starts with extraordinary teachers.</h3>
                     <p class="h3 fw300">At Bethel, you’ll learn under passionate, engaged professors—many with Ivy League credentials—who will support you, challenge you, and collaborate with you on everything from high-level research to national conference presentations.</p>
@@ -407,31 +361,38 @@ pageTitle: Test title
             </div>
         </div>
 
-        <div class="proofPoints  grid  mb5  ph2 pv4  ta--center" style="margin: 0 -2em">
-            <div class="grid-cell  mr2--medium  mb2  bkg--white  backgroundOffset --diagonalOrange" style="border: 2px solid peachpuff; border-radius: .5em;" >
+</div>
+</section>
+
+
+<section class="bkg--white  bkg--squiggles" >
+    <div class="inner">
+        <div class="proofPoints  grid  pt4  pb3  ta--center">
+            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;" >
                 <div class="grid-pad-3x ">
                     
-                            {{!-- <img class="lazyload  pt1" alt="Market research" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/market-research.png" width="60"> --}}
+                            <img class="lazyload  pt1" alt="Market research" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/market-research.png" width="60">
                         
                             <p class="mv0  sans-serif  fw400" style="font-size:4.5em">97%</p>
                             <p class="h5  mv0  fw400 ">of recent grads are employed or in graduate school </p>
 
                 </div>
+
             </div>
-            <div class="grid-cell  mr2--medium  mb2  bkg--white  backgroundOffset --diagonalOrange" style="border: 2px solid peachpuff; border-radius: .5em;">
+            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;">
                 <div class="grid-pad-3x ">
 
-                            {{!-- <img class="lazyload  pt1" alt="Share your story" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/share-story.png" title="" style="" width="60"> --}}
+                            <img class="lazyload  pt1" alt="Share your story" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/share-story.png" title="" style="" width="60">
   
                             <p class="mv0  sans-serif  fw400" style="font-size:4.5em">12:1</p>
                             <p class="h5  mv0  fw400">Student-to-faculty Ratio</p>
 
                 </div>
             </div>
-            <div class="grid-cell  mb2   bkg--white  backgroundOffset --diagonalOrange" style="border: 2px solid peachpuff; border-radius: .5em;">
+            <div class="grid-cell  mb2   bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;">
                 <div class="grid-pad-3x ">
  
-                            {{!-- <img class="lazyload  pt1" alt="Hands-on learning" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/hands-on.png" width="60"> --}}
+                            <img class="lazyload  pt1" alt="Hands-on learning" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/hands-on.png" width="60">
 
                             <p class="mv0  sans-serif  fw400" style="font-size:4.5em">100s</p>
                             <p class="h5  mv0  fw400 ">Business partnerships with companies like NASA, Medtronic, and 3M</p>
@@ -440,6 +401,11 @@ pageTitle: Test title
             </div>
         </div>
 
+    </div>
+</section>
+
+<section class="bkg--white  pv6">
+    <div class="inner  pt4" >
         <div class="grid  pb4  mb6">
             <div class="grid-cell">
                 <div class="grid-pad-1x">
@@ -472,7 +438,7 @@ pageTitle: Test title
             </div>
         </div>
 
-        <div class="grid  grid--center  mt5  mb4--medium  pt2  pb4 pb6--medium" style="background: #ffe3651a; border-radius: 1em;">
+        <div class="grid  grid--center  mt5  mb4--medium  pt2  pb4 pb6--medium" style="background: #ffe3651a;  border: 2px solid #ffc600; border-radius: 1em;">
             <div class="grid-cell  u-large-4-5 ">
                 <div class="grid-pad-1x">
         
@@ -507,7 +473,7 @@ pageTitle: Test title
             </div>
         </div>
 
-        <div class="grid mh6  mb5">
+        <div class="grid mh6--medium  mb5">
             <div class="grid-cell">
                 <div class="grid-pad-1x">
                     <h3 class="alpha  fw400">Find by topic</h3>
@@ -549,10 +515,10 @@ pageTitle: Test title
 </section>
 
 {{!-- Experience --}}
-<section class="pt6  realSection">
+<section class="pv6  realSection">
     <div class="bkg--diagonal2"></div>
     <div class="inner">
-        <h1 class="mt0  mb2  fw300  ta--center"  style="font-size: 5rem">Real Experience</h1>
+        <h2 class="delta  mt0  mb2  fw300  ta--center">Head-turning experience</h2>
         <div class="grid  mb3">
             <div class="grid-cell">
                 <div class="medium-grid-pad-2x">
@@ -561,7 +527,7 @@ pageTitle: Test title
                     </div>
                 </div>
             </div>
-            <div class="grid-cell  u-1-3">
+            <div class="grid-cell  u-1-3--medium">
                 <div class="medium-grid-pad-2x">
                     <h3 class="alpha  fw400">Practice what you learn.</h3>
                     <p>Some of the best learning comes from doing. That’s why we weave hundreds of hands-on experiences into our programs—like collaborative research, internships, study abroad, and service learning, to name a few.</p>
@@ -569,50 +535,50 @@ pageTitle: Test title
                 </div>
             </div>
         </div>
+    </div>
+</section>
 
-        <div class="grid  mb5" style="margin: 0 -2em">
-            <div class="grid-cell  mr1  bkg--white"  >
-                <div class=" medium-grid-pad-2x ">
-                    <div class="grid">
-                        <div class="grid-cell u-1-4  mr1">
+<section class="bkg--white  bkg--squiggles" >
+    <div class="inner">
+        <div class="proofPoints  grid  pt4  pb3  ta--center">
+            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;" >
+                <div class="grid-pad-3x ">
+                    
                             <img class="lazyload  pt1" alt="Market research" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/market-research.png" width="60">
-                        </div>
-                        <div class="grid-cell">
-                            <p class="mv0  sans-serif  fw300" style="font-size:5em">97%</p>
+                        
+                            <p class="mv0  sans-serif  fw400" style="font-size:4.5em">97%</p>
                             <p class="h5  mv0  fw400 ">of recent grads are employed or in graduate school </p>
-                        </div>
-                    </div>
+
                 </div>
+
             </div>
-            <div class="grid-cell  mr1  bkg--white"  >
-                <div class=" medium-grid-pad-2x ">
-                    <div class="grid">
-                        <div class="grid-cell u-1-4  mr1">
-                            <img class="lazyload  pt1" alt="Share your story" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/share-story.png"
-                            title="" style="" width="60">
-                        </div>
-                        <div class="grid-cell">
-                            <p class="mv0  sans-serif  fw300" style="font-size:5em">12:1</p>
+            <div class="grid-cell  mr2--medium  mb2  bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;">
+                <div class="grid-pad-3x ">
+
+                            <img class="lazyload  pt1" alt="Share your story" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/share-story.png" title="" style="" width="60">
+  
+                            <p class="mv0  sans-serif  fw400" style="font-size:4.5em">12:1</p>
                             <p class="h5  mv0  fw400">Student-to-faculty Ratio</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
-            <div class="grid-cell  mr1  bkg--white"  >
-                <div class=" medium-grid-pad-2x ">
-                    <div class="grid">
-                        <div class="grid-cell u-1-4  mr1">
+            <div class="grid-cell  mb2   bkg--white " style="border: 2px solid #ffc600; border-radius: .5em;">
+                <div class="grid-pad-3x ">
+ 
                             <img class="lazyload  pt1" alt="Hands-on learning" data-src="https://www.bethel.edu/undergrad/academics/real-experience/images/hands-on.png" width="60">
-                        </div>
-                        <div class="grid-cell">
-                            <p class="mv0  sans-serif  fw300" style="font-size:5em">100s</p>
+
+                            <p class="mv0  sans-serif  fw400" style="font-size:4.5em">100s</p>
                             <p class="h5  mv0  fw400 ">Business partnerships with companies like NASA, Medtronic, and 3M</p>
-                        </div>
-                    </div>
+
                 </div>
             </div>
         </div>
 
+    </div>
+</section>
+
+<section class="bkg--white  pv6">
+    <div class="inner">
         <div class="grid  mb5">
             <div class="grid-cell u-medium-1-3">
                 <div class="grid-pad-2x">
@@ -689,9 +655,9 @@ pageTitle: Test title
 <section class="mt4  pt6  realSection">
     <div class="bkg--diagonal2"></div>
     <div class="inner">
-        <h1 class="  mt0  mb2  fw300  ta--center"  style="font-size: 5rem">Real Faith</h1>
+        <h2 class="mt0  mb2  fw300  ta--center  delta">Life-changing faith</h2>
         <div class="grid  mb3">
-            <div class="grid-cell  u-1-3">
+            <div class="grid-cell  u-medium-1-3">
                 <div class="medium-grid-pad-2x">
                     <h3 class="alpha fw400">Live what you believe.</h3>
                     <p>Beyond academics, there's something that draws Bethel students together. It's a sense of calling, a commitment to shared values, and a deep desire to fulfill a greater purpose.</p>
@@ -810,7 +776,7 @@ pageTitle: Test title
     </div>
 </section>
 
-        {{> section--request-info }}
+{{> section--request-info }}
 
 <section class="grid-section  mt0  pv5  bkg--white">
     {{!-- <h2 class="center  mb1  beta  fw300">Take the Next Step</h2> --}}
@@ -818,7 +784,7 @@ pageTitle: Test title
     <div class="inner">   
         
         <div class="grid mt4">
-            <div class="grid-cell">
+            <div class="grid-cell  mb5  mb0--medium">
                 <div class=" medium-grid-pad-2x ">
                     <h3 class="beta  fw300">Visit Us</h3>
                     <p>Lorem ipsum dolor sit Mollitia eligendi consequatur quas tempora libero magni veritatis debitis ab
