--- a/src/templates/partials/moving-picture.hbs
+++ b/src/templates/partials/moving-picture.hbs
@@ -7,7 +7,7 @@
                 <li class="js_slide">
                     <div class="moving-picture">
                         <div class="moving-picture__media">
-                            <div id="vid-wrap" style="min-width: 100%;"></div>
+                            <div id="vid-wrap" style="min-width: 100%; margin-bottom: -11px;"></div>
                             <script type="text/javascript">
                                     if (window.matchMedia("(min-width: 1100px)").matches) {
                                         var vidStr = '<video preload="auto" autoplay="autoplay" muted="true" loop="true" style="min-width: 100%" id="vid">';
