--- a/src/css/enhance/boxEffects.css
+++ b/src/css/enhance/boxEffects.css
@@ -2,7 +2,7 @@
     position: relative;
 }
 
-.backgroundOffset img {
+.backgroundOffset > * {
     z-index: 10;
     position: relative;
 }
@@ -14,14 +14,13 @@
     bottom: 0;
     right: 0;
     left: 0;
+    z-index: 0;
 }
 
 .backgroundOffset.--diagonalOrange::after {
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ffc600' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
-    z-index: 0;
 }
 
 .backgroundOffset.--diagonalBlue::after {
     background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%230069aa' fill-opacity='.9' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
-    z-index: 0;
 }
