--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -132,7 +132,7 @@ pageTitle: Test title
             <g>
             </g>
         </svg>
-        <a href="#academics">Purpose-driven academics</a>
+        <a href="#academics">World-class academics</a>
     </span>
     <span>
         <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -275,6 +275,9 @@ pageTitle: Test title
 {{!-- Profiles --}}
 <section class="bkg--white" style="overflow: hidden;">
     <div class="bkg--diagonal"></div>
+    <div class="pattern" style="position: absolute;">
+        <canvas class="patternBubbles" width="400" height="2400"></canvas>
+    </div>
   
     <div class="inner pv6">
         <h2 class="center  mt1  mb1  gamma  fw300" style="position: relative;">Our Stories</h2>
@@ -334,7 +337,7 @@ pageTitle: Test title
 <section id="academics" class="pv5  realSection" style="overflow: hidden;">
     <div class="bkg--diagonal2"></div>
     <div class="inner" style="position: relative;z-index:10;">
-        <h2 class="delta  fw300  ta--center">Purpose-driven academics</h2>
+        <h2 class="delta  fw300  ta--center">World-class academics</h2>
 
         <div class="grid  grid--center  mb5">
             <div class="grid-cell u-medium-2-3">
